# crawler

./: Cargo.toml  build.rs  database.db
migrations/2022-10-22-130531_create_comments/: down.sql  up.sql
proto/: category_send.proto  comment_send.proto  product_send.proto  scraper_rpc.proto
src/: deserializer.rs  lib.rs  main.rs  model.rs  schema.rs
src/scraper/: category_scraper.rs  comment_scraper.rs  mod.rs  product_scraper.rs
src/sender/: category.rs  comment.rs  mod.rs  product.rs
src/services/: category.rs  comment.rs  mod.rs  product.rs
