[package]
name = "digikala_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "listener"
path = "src/bin/reciever/mod.rs"

[[bin]]
name = "sender"
path = "src/bin/sender/mod.rs"

[dependencies]
async-trait = {version="0.1.58"}
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full", "rt-multi-thread", "macros"] } 
serde_json = "1.0"
diesel = { version = "2.0.0", features = ["sqlite"] }
dotenvy = {version = "0.15"}
tonic = {version = "0.8.0"}
prost = "0.11"

[build-dependencies]
tonic-build = "0.8"
